# Crawl-Shein-Web

./: .gitignore  README.md  pyproject.toml
code/: tool.py  tool_v1.py
