[tool.poetry]
name = "crawl-shein-web"
version = "0.1.0"
description = ""
authors = ["Blue <1660551499@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.8"
drissionpage = "^4.0.4.24"
pyquery = "^2.0.0"
loguru = "^0.7.2"
retrying = "^1.3.4"
redis = "^5.0.6"
pyinstaller = "^6.8.0"
jsonpath = "^0.82.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
